--- a/Documentos/angular/projetos/app1/src/app/topo/topo.component.html
+++ b/Documentos/angular/projetos/app1/src/app/topo/topo.component.html
@@ -1,3 +1,4 @@
-<nav class="navbar navbar-inverse bg-faded, navbar">
-  <span class="navbar-brand mb-0 h1">Aprendendo Inglês</span>
+<nav class="navbar navbar bg-faded">
+  <h1 class="navbar-brand mb-0">{{titulo}}</h1>
 </nav>
+
