--- a/app1/src/app/app.component.html
+++ b/app1/src/app/app.component.html
@@ -1,4 +1,27 @@
 <app-topo></app-topo>
-<div *ngIf="jogoEmAndamento">
+<div *ngIf="jogoEmAndamento; else fimDeJogo">
     <app-painel (encerrarJogo)="encerrarJogo($event)"></app-painel>
 </div>
+<ng-template #fimDeJogo>
+    <div *ngIf="tipoEncerramento==='derrota'; else fimDeJogoVitoria" class="container" style="margin-top: 50px">
+        <div class="row">
+                <div class="col">
+                    <h3 style="color:red">Fim de Jogo, infelizmente você perdeu</h3>
+                    <button class="btn btn-primary" (click)="reiniciarJogo()">Jogar Novamente</button>
+                </div>
+            </div>
+    </div>
+    
+</ng-template>
+
+<ng-template #fimDeJogoVitoria>
+    <div class="container" style="margin-top: 50px">
+        <div class="row">
+            <div class="col">
+                <h3 style="color: green">Fim de jogo você venceu. Parabéns!!</h3>
+                <button class="btn btn-primary" (click)="reiniciarJogo()">Jogar Novamente</button>
+            </div>
+        </div>
+    </div>
+    
+</ng-template>
